# FlowGSP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-testpypi.yml
flowgsp/: __init__.py
flowgsp/filters/: __init__.py  chebyshev_filter.py  filter.py  graph_filter.py  hilbert_filter.py  polynomial_filter.py  spectral_filter.py
flowgsp/graphs/: __init__.py  basic_graphs.py  graph.py  graph_utils.py
flowgsp/operators/: __init__.py  adjacency.py  base.py  jordan_destroy.py  laplacian.py
flowgsp/surrogates/: __init__.py  stationarity.py  surrogate.py
flowgsp/utils/: __init__.py  metrics.py  numericals.py  stats_utils.py  utils.py
resources/manhattan_graph_data/: taxi_graphsignal.pkl  taxi_subgraph_signal.pkl  taxi_subgraph_signal_year.pkl  taxi_subgraph_signal_year_dropoff.pkl
resources/temperature_bretagne_graph_data/: bretagne_graph.pkl  fr.json  listeStationsPackRadome.csv  stations_pos.pkl
resources/temperature_bretagne_graph_data/ipsl-temperature/2024/: 29041002_CORAY-CHAT-EAU_MTO_1H_2024.nc  29058003_BEG-MEIL_MTO_1H_2024.nc  29158001_PTE-DE-PENMARCH_MTO_1H_2024.nc  29168001_PTE-DU-RAZ_MTO_1H_2024.nc  29214001_PLOVAN_MTO_1H_2024.nc  29216001_QUIMPER_MTO_1H_2024.nc  29293001_TREGUNC_MTO_1H_2024.nc  35057003_LA-CHAPELLE-BOUEXIC_MTO_1H_2024.nc  35202001_LA-NOE-BLANCHE_MTO_1H_2024.nc  35294001_SAINTE-MARIE_MTO_1H_2024.nc  44015001_BLAIN_MTO_1H_2024.nc  44020001_NANTES-BOUGUENAIS_MTO_1H_2024.nc  44067001_GUEMENE-PENFAO_MTO_1H_2024.nc  44072002_HERBIGNAC_MTO_1H_2024.nc  44103001_ST-NAZAIRE-MONTOIR_MTO_1H_2024.nc  44109012_NANTES-VILLE_MTO_1H_2024.nc  (+29 more)
tutorials/: advanced.ipynb  basics.ipynb
