[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "flowGSP"
dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "networkx>=2.6.0",
    "tqdm>=4.62.0",
    "torch>=1.10.0",
    "torchvision>=0.11.0",
    "torch-geometric>=2.0.0",
    "opencv-python>=4.5.3",
    "scikit-image>=0.18.0",
    "sympy>=1.7.0",
    "seaborn>=0.11.0",
]
dynamic = ["version"]
requires-python = ">=3.9"
authors = [
  {name = "Michael Chan", email = "miki998chan@gmail.com"},
]
readme = "README.md"

[tool.setuptools]
package-dir = { "" = "." }  # no special layout

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.setuptools.packages.find]
include = ["flowgsp*"]